@@ -50,6 +50,197 @@
 #define IPMI_SDR_CHARS_IN_ALPHABET 26
 
 int
+ipmi_sdr_parse_sensor_name (ipmi_sdr_ctx_t ctx,
+			    const void *sdr_record,
+			    unsigned int sdr_record_len,
+			    uint8_t sensor_number,
+			    unsigned int flags,
+			    char *buf,
+			    unsigned int buflen)
+{
+  char id_string[IPMI_SDR_MAX_ID_STRING_LENGTH + 1];
+  char device_id_string[IPMI_SDR_MAX_DEVICE_ID_STRING_LENGTH + 1];
+  char *id_string_ptr = NULL;
+  uint8_t record_type;
+  unsigned int flags_mask = (IPMI_SDR_SENSOR_NAME_FLAGS_IGNORE_SHARED_SENSORS);
+
+  if (!ctx || ctx->magic != IPMI_SDR_CTX_MAGIC)
+    {
+      ERR_TRACE (ipmi_sdr_ctx_errormsg (ctx), ipmi_sdr_ctx_errnum (ctx));
+      return (-1);
+    }
+
+  if (ctx->operation != IPMI_SDR_OPERATION_READ_CACHE)
+    {
+      SDR_SET_ERRNUM (ctx, IPMI_SDR_ERR_CACHE_READ_INITIALIZATION);
+      return (-1);
+    }
+
+  if (((sdr_record_len && !sdr_record_len)
+       || (!sdr_record && sdr_record_len))
+      || (flags & ~flags_mask)
+      || !buf
+      || !buflen)
+    {
+      SDR_SET_ERRNUM (ctx, IPMI_SDR_ERR_PARAMETERS);
+      return (-1);
+    }
+
+  memset (buf, '\0', buflen);
+
+  if (ipmi_sdr_parse_record_id_and_type (ctx,
+					 sdr_record,
+					 sdr_record_len,
+                                         NULL,
+                                         &record_type) < 0)
+    return (-1);
+
+  if (record_type == IPMI_SDR_FORMAT_FULL_SENSOR_RECORD
+      || record_type == IPMI_SDR_FORMAT_COMPACT_SENSOR_RECORD
+      || record_type == IPMI_SDR_FORMAT_EVENT_ONLY_RECORD)
+    {
+      memset (id_string, '\0', IPMI_SDR_MAX_ID_STRING_LENGTH + 1);
+
+      if (ipmi_sdr_parse_id_string (ctx,
+				    sdr_record,
+				    sdr_record_len,
+				    id_string,
+                                    IPMI_SDR_MAX_ID_STRING_LENGTH) < 0)
+	return (-1);
+
+      id_string_ptr = id_string;
+    }
+  else if (record_type == IPMI_SDR_FORMAT_GENERIC_DEVICE_LOCATOR_RECORD
+	   || record_type == IPMI_SDR_FORMAT_FRU_DEVICE_LOCATOR_RECORD
+           || record_type == IPMI_SDR_FORMAT_MANAGEMENT_CONTROLLER_DEVICE_LOCATOR_RECORD)
+    {
+      memset (device_id_string, '\0', IPMI_SDR_MAX_DEVICE_ID_STRING_LENGTH + 1);
+
+      if (ipmi_sdr_parse_device_id_string (ctx,
+					   sdr_record,
+					   sdr_record_len,
+                                           device_id_string,
+                                           IPMI_SDR_MAX_DEVICE_ID_STRING_LENGTH) < 0)
+	return (-1);
+      
+      id_string_ptr = device_id_string;
+    }
+  else
+    {
+      SDR_SET_ERRNUM (ctx, IPMI_SDR_ERR_PARSE_INVALID_SDR_RECORD);
+      return (-1);
+    }
+
+  /* special case if sensor sharing is involved */
+  if ((record_type == IPMI_SDR_FORMAT_COMPACT_SENSOR_RECORD
+       || record_type == IPMI_SDR_FORMAT_EVENT_ONLY_RECORD)
+      && !(flags & IPMI_SDR_SENSOR_NAME_FLAGS_IGNORE_SHARED_SENSORS))
+    {
+      uint8_t share_count;
+      uint8_t id_string_instance_modifier_type;
+      uint8_t id_string_instance_modifier_offset;
+      uint8_t entity_instance_sharing;
+      
+      if (ipmi_sdr_parse_sensor_record_sharing (ctx,
+						sdr_record,
+						sdr_record_len,
+						&share_count,
+						&id_string_instance_modifier_type,
+						&id_string_instance_modifier_offset,
+						&entity_instance_sharing) < 0)
+	return (-1);
+      
+      if (share_count > 1
+	  && entity_instance_sharing == IPMI_SDR_ENTITY_INSTANCE_INCREMENTS_FOR_EACH_SHARED_RECORD)
+	{
+	  uint8_t sensor_number_base;
+	  uint8_t sensor_number_offset;
+
+	  if (ipmi_sdr_parse_sensor_number (ctx,
+					    sdr_record,
+					    sdr_record_len,
+					    &sensor_number_base) < 0)
+	    return (-1);
+	  
+	  /* I guess it's a bug if the sensor number passed in is bad */
+	  if (sensor_number >= sensor_number_base)
+	    sensor_number_offset = sensor_number - sensor_number_base;
+	  else
+	    goto fallthrough;
+	  
+	  if (id_string_instance_modifier_type == IPMI_SDR_ID_STRING_INSTANCE_MODIFIER_TYPE_ALPHA)
+	    {
+	      char modifierbuf[IPMI_SDR_MODIFIER_BUFLEN];
+	      
+	      memset (modifierbuf, '\0', IPMI_SDR_MODIFIER_BUFLEN);
+              
+	      /* IPMI spec example is:
+	       *
+	       * "If the modifier = alpha, offset=0
+	       * corresponds to 'A', offset=25 corresponses to
+	       * 'Z', and offset = 26 corresponds to 'AA', for
+	       * offset=26 the sensors could be identified as:
+	       * Temp AA, Temp AB, Temp AC."
+	       *
+	       * achu note: id_string_instance_modifier_type
+	       * is a 7 bit field, so we cannot reach a
+	       * situation of 'AAA' or 'AAB'.  The max is
+	       * 'EX':
+	       *
+	       * 'A' + (127/26) = 4 => 'E'
+	       * 'A' + (127 % 26) = 23 => 'X'
+	       */
+	      
+	      if ((id_string_instance_modifier_type + sensor_number_offset) < IPMI_SDR_CHARS_IN_ALPHABET)
+		snprintf (buf,
+			  buflen,
+			  "%s %c",
+			  id_string_ptr,
+			  'A' + ((id_string_instance_modifier_type + sensor_number_offset)/IPMI_SDR_CHARS_IN_ALPHABET));
+	      else
+		snprintf (buf,
+			  buflen,
+			  "%s %c%c",
+			  id_string_ptr,
+			  'A' + ((id_string_instance_modifier_type + sensor_number_offset)/IPMI_SDR_CHARS_IN_ALPHABET),
+			  'A' + (id_string_instance_modifier_type % IPMI_SDR_CHARS_IN_ALPHABET));
+	    }
+	  else
+	    {
+	      /* IPMI spec example is:
+	       *
+	       * "Suppose sensor ID is 'Temp' for 'Temperature
+	       * Sensor', share count = 3, ID string instance
+	       * modifier = numeric, instance modifier offset
+	       * = 5 - then the sensors oculd be identified
+	       * as: Temp 5, Temp 6, Temp 7"
+	       */
+	      snprintf (buf,
+			buflen,
+			"%s %u",
+			id_string_ptr,
+			id_string_instance_modifier_offset + sensor_number_offset);
+	    }
+	  
+	  return (0);
+	}
+
+    fallthrough:
+      snprintf (buf,
+		buflen,
+		"%s",
+		id_string_ptr);
+    }
+  else
+    snprintf (buf,
+	      buflen,
+	      "%s",
+	      id_string_ptr);
+
+  return (0);
+}
+
+int
 ipmi_sdr_parse_entity_sensor_name (ipmi_sdr_ctx_t ctx,
 				   const void *sdr_record,
 				   unsigned int sdr_record_len,
@@ -64,8 +255,8 @@ ipmi_sdr_parse_entity_sensor_name (ipmi_sdr_ctx_t ctx,
   uint8_t entity_id, entity_instance, entity_instance_type;
   const char *entity_id_str;
   uint8_t record_type;
-  unsigned int flags_mask = (IPMI_SDR_ENTITY_SENSOR_NAME_FLAGS_ALWAYS_OUTPUT_INSTANCE_NUMBER
-			     | IPMI_SDR_ENTITY_SENSOR_NAME_FLAGS_IGNORE_SHARED_SENSORS);
+  unsigned int flags_mask = (IPMI_SDR_SENSOR_NAME_FLAGS_IGNORE_SHARED_SENSORS
+			     | IPMI_SDR_SENSOR_NAME_FLAGS_ALWAYS_OUTPUT_INSTANCE_NUMBER);
 
   if (!ctx || ctx->magic != IPMI_SDR_CTX_MAGIC)
     {
@@ -128,7 +319,10 @@ ipmi_sdr_parse_entity_sensor_name (ipmi_sdr_ctx_t ctx,
       id_string_ptr = device_id_string;
     }
   else
-    return (-1);
+    {
+      SDR_SET_ERRNUM (ctx, IPMI_SDR_ERR_PARSE_INVALID_SDR_RECORD);
+      return (-1);
+    }
 
   if (ipmi_sdr_parse_entity_id_instance_type (ctx,
 					      sdr_record,
@@ -169,14 +363,14 @@ ipmi_sdr_parse_entity_sensor_name (ipmi_sdr_ctx_t ctx,
   else
     {
       if (ipmi_sdr_stats_compile (ctx) < 0)
-	  return (-1);
+	return (-1);
 
       if (ipmi_sdr_stats_entity_instance_unique (ctx, entity_id) > 1)
         {
           /* special case if sensor sharing is involved */
           if ((record_type == IPMI_SDR_FORMAT_COMPACT_SENSOR_RECORD
                || record_type == IPMI_SDR_FORMAT_EVENT_ONLY_RECORD)
-              && !(flags & IPMI_SDR_ENTITY_SENSOR_NAME_FLAGS_IGNORE_SHARED_SENSORS))
+              && !(flags & IPMI_SDR_SENSOR_NAME_FLAGS_IGNORE_SHARED_SENSORS))
             {
               uint8_t share_count;
               uint8_t id_string_instance_modifier_type;
@@ -281,7 +475,7 @@ ipmi_sdr_parse_entity_sensor_name (ipmi_sdr_ctx_t ctx,
         }
       else
 	{
-	  if (flags & IPMI_SDR_ENTITY_SENSOR_NAME_FLAGS_ALWAYS_OUTPUT_INSTANCE_NUMBER)
+	  if (flags & IPMI_SDR_SENSOR_NAME_FLAGS_ALWAYS_OUTPUT_INSTANCE_NUMBER)
 	    snprintf (buf,
 		      buflen,
                     "%s %u %s",
